fixed burger and title alignment in mobile

--- a/public/styles/base.css
+++ b/public/styles/base.css
@@ -6,11 +6,12 @@ body {
 
 h1 {
   font-family: 'Goblin One', cursive;
-  font-size: 2em;
+  font-size: 2.5em;
   margin-top: 0px;
   margin-bottom: 5px;
   margin-right: 0px;
   display: inline-block;
+  width: 80%;
 }
 
 h2 {
@@ -55,6 +56,10 @@ iframe {
   font-size: 1.35em;
 }
 
+#headerbox {
+  position: relative;
+}
+
 #burger {
   display: none
 }
@@ -82,6 +87,10 @@ iframe {
   nav {
     padding-bottom: 0px;
     margin-bottom: 5px;
+  }
+
+  iframe {
+    margin-top: 10px;
   }
 
   .links {
@@ -116,7 +125,9 @@ iframe {
   #burger {
     display: block;
     cursor: pointer;
-    float: right;
+    position: absolute;
+    top: 0.7%;
+    left: 92%;
     font-size: 1.35em;
   }
   
@@ -137,6 +148,10 @@ iframe {
 /* Computer Sized */
 
 @media only screen and (min-width: 1025px) {
+  iframe {
+    width: 70%;
+  }
+
   .aboutImg {
     width: 30%;
   }
